# qfnu-exam-2-ics

./: .gitignore  README.md  pyproject.toml
docs/: exam-api-refactor-design.md
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
src/qfnu_exam/: __init__.py  main.py
src/qfnu_exam/core/: __init__.py  auth.py  calendar.py  config.py
src/qfnu_exam/web/: __init__.py  server.py
src/qfnu_exam/web/static/: index.html
